Update surefire plugin to 3.0.0-M5