@@ -200,13 +200,16 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>3.0.0-M4</version>
+                        <version>3.0.0-M5</version>
                         <configuration>
-                            <argLine>
-                                ${argLine}
-                                --illegal-access=deny
-                                -Xmx1500m
-                            </argLine>
+                            <!-- 3.0.0-M4 configuration -->
+<!--                            <argLine>-->
+<!--                                ${argLine}-->
+<!--                                &#45;&#45;illegal-access=deny-->
+<!--                                -Xmx1500m-->
+<!--                            </argLine>-->
+                            <!-- Activate the use of TCP to transmit events to the plugin -->
+                            <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory" />
                         </configuration>
                     </plugin>
                 </plugins>
